--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../src/index.scss" />
     <title>React Todo App</title>
   </head>
   <body>
